--- a/Views/About/Index.cshtml
+++ b/Views/About/Index.cshtml
@@ -35,7 +35,7 @@
                     <div class="about-content">
                         <h2>@Html.Raw(ab.Title)</h2>
                         @Html.Raw(ab.Description)
-                        <a class="default-btn" href="#">view courses</a>
+                        <a class="default-btn" href="~/home/index">view courses</a>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6">
@@ -65,10 +65,10 @@
                 <div class="col-md-3 col-sm-4 col-xs-12">
                     <div class="single-teacher mb-45">
                         <div class="single-teacher-img">
-                            <a href="@teacher.Link"><img src="~/@teacher.ImageUrl" alt="teacher"></a>
+                            <a asp-controller="techer" asp-action="details" asp-route-id="@teacher.Id"><img src="~/@teacher.ImageUrl" alt="teacher"></a>
                         </div>
                         <div class="single-teacher-content text-center">
-                            <h2><a href="@teacher.Link">@teacher.FullName</a></h2>
+                            <h2><a asp-controller="teacher" asp-action="details" asp-route-id="@teacher.Id">@teacher.FullName</a></h2>
                             <h4>@teacher.Profession</h4>
                             <ul>
                                 <li><a href="@teacher.Facebook"><i class="zmdi zmdi-facebook"></i></a></li>
