--- a/Views/Shared/Components/Header/Default.cshtml
+++ b/Views/Shared/Components/Header/Default.cshtml
@@ -1,15 +1,35 @@
-﻿<!-- Header Area Start -->
+﻿
+<!-- Header Area Start -->
 <header class="top">
-    <div class="header-area header-sticky fixed">
+    <div class="header-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-sm-8 col-xs-12">
+                    <div class="header-top-left">
+                        <p>HAVE ANY QUESTION ?  +880 5698  598  6587</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="header-top-right text-right">
+                        <ul>
+                            <li><a asp-controller="account" asp-action="login">login</a></li>
+                            <li><a asp-controller="account" asp-action="registr">signup</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="header-area two header-sticky">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-3 col-xs-6">
                     <div class="logo">
-                        <a href="~/home/index"><img src="~/img/logo/logo.png" alt="eduhome" /></a>
+                        <a href="~/home/index"><img src="~/img/logo/logo2.png" alt="eduhome" /></a>
                     </div>
                 </div>
-                <div class="col-md-9 col-sm-9 col-xs-12">
-                    <div class="content-wrapper one">
+                <div class="col-md-9 col-sm-9 col-xs-6">
+                    <div class="content-wrapper text-right">
                         <!-- Main Menu Start -->
                         <div class="main-menu one text-right">
                             <nav>
@@ -19,31 +39,31 @@
                                     </li>
                                     <li><a href="~/about/index">About</a></li>
                                     <li>
-                                        <a href="~/course/index">courses</a>
+                                        <a href="~/course/index">Courses</a>
                                         <ul>
                                             <li><a href="~/course/index">courses</a></li>
-                                            <li><a href="course-details.html">courses details</a></li>
+                                            <li><a asp-controller="course" asp-action="details" asp-route-id="1">courses details</a></li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="~/event/index">event</a>
+                                        <a href="~/event/index">Event</a>
                                         <ul>
                                             <li><a href="~/event/index">event</a></li>
-                                            <li><a href="event-details.html">event details</a></li>
+                                            <li><a asp-controller="event" asp-action="details" asp-route-id="1">event details</a></li>
                                         </ul>
                                     </li>
                                     <li class="hidden-sm">
-                                        <a href="~/teacher/index">teacher</a>
+                                        <a href="~/teacher/index">Teacher</a>
                                         <ul>
                                             <li><a href="~/teacher/index">teacher</a></li>
-                                            <li><a href="teacher-details.html">teacher details</a></li>
+                                            <li><a asp-controller="teacher" asp-action="details" asp-route-id="1">teacher details</a></li>
                                         </ul>
                                     </li>
                                     <li>
                                         <a href="~/blog/index">blog</a>
                                         <ul>
                                             <li><a href="~/blog/index">blog</a></li>
-                                            <li><a href="blog-details.html">blog details</a></li>
+                                            <li><a asp-controller="blog" asp-action="details" asp-route-id="1">blog details</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="~/contact/index">Contact</a></li>
@@ -53,7 +73,29 @@
                         </div>
                         <div class="mobile-menu hidden-lg hidden-md one"></div>
                         <!-- Main Menu End -->
+                        <!--Search Form Start-->
+                        <div class="search-btn">
+                            <ul data-toggle="dropdown" class="header-search search-toggle">
+                                <li class="search-menu">
+                                    <i class="fa fa-search"></i>
+                                </li>
+                            </ul>
+                            <div class="search">
+                                <div class="search-form">
+                                    <form id="search-form" action="#">
+                                        <input type="search" placeholder="Search here..." name="search" />
+                                        <button type="submit">
+                                            <span><i class="fa fa-search"></i></span>
+                                        </button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <!--End of Search Form-->
                     </div>
+                </div>
+                <div class="col-xs-12">
+                    <div class="mobile-menu hidden-lg hidden-md hidden-sm"></div>
                 </div>
             </div>
         </div>
