--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
     <!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="~/http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+
 @*    @await Component.InvokeAsync("HeaderTop")*@
     @await Component.InvokeAsync("Header")
 
@@ -48,7 +49,7 @@
     <script src="~/js/jquery.nicescroll.min.js"></script>
     <script src="~/js/plugins.js"></script>
     <script src="~/js/main.js"></script>
-    <script src="~/js/request.js"></script>
+    <script src="~/js/request.js" asp-append-version="true"></script>
 
 
 </body>
