--- a/Views/Teacher/Index.cshtml
+++ b/Views/Teacher/Index.cshtml
@@ -30,10 +30,10 @@
                 <div class="col-md-3 col-sm-4 col-xs-12">
                     <div class="single-teacher mb-45">
                         <div class="single-teacher-img">
-                            <a href="@teacher.Link"><img src="~/@teacher.ImageUrl" alt="teacher"></a>
+                            <a asp-controller="teacher" asp-action="details" asp-route-id="@teacher.Id"><img src="~/@teacher.ImageUrl" alt="teacher"></a>
                         </div>
                         <div class="single-teacher-content text-center">
-                            <h2><a href="@teacher.Link">@teacher.FullName</a></h2>
+                            <h2><a asp-controller="teacher" asp-action="details" asp-route-id="@teacher.Id">@teacher.FullName</a></h2>
                             <h4>@teacher.Profession</h4>
                             <ul>
                                 <li><a href="@teacher.Facebook"><i class="zmdi zmdi-facebook"></i></a></li>
